minimal viable service
