# fio-fee-reporter/restapi/operations/get_fee_by_action_name_responses.go
@@ -1,0 +1,105 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/blockpane/fio-tools/fio-fee-reporter/models"
+)
+
+// GetFeeByActionNameOKCode is the HTTP code returned for type GetFeeByActionNameOK
+const GetFeeByActionNameOKCode int = 200
+
+/*GetFeeByActionNameOK An array of prices for each action in FIO
+
+swagger:response getFeeByActionNameOK
+*/
+type GetFeeByActionNameOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.Price `json:"body,omitempty"`
+}
+
+// NewGetFeeByActionNameOK creates GetFeeByActionNameOK with default headers values
+func NewGetFeeByActionNameOK() *GetFeeByActionNameOK {
+
+	return &GetFeeByActionNameOK{}
+}
+
+// WithPayload adds the payload to the get fee by action name o k response
+func (o *GetFeeByActionNameOK) WithPayload(payload []*models.Price) *GetFeeByActionNameOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get fee by action name o k response
+func (o *GetFeeByActionNameOK) SetPayload(payload []*models.Price) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetFeeByActionNameOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.Price, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetFeeByActionNameServiceUnavailableCode is the HTTP code returned for type GetFeeByActionNameServiceUnavailable
+const GetFeeByActionNameServiceUnavailableCode int = 503
+
+/*GetFeeByActionNameServiceUnavailable Data is stale, has not been updated for several minutes
+
+swagger:response getFeeByActionNameServiceUnavailable
+*/
+type GetFeeByActionNameServiceUnavailable struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetFeeByActionNameServiceUnavailable creates GetFeeByActionNameServiceUnavailable with default headers values
+func NewGetFeeByActionNameServiceUnavailable() *GetFeeByActionNameServiceUnavailable {
+
+	return &GetFeeByActionNameServiceUnavailable{}
+}
+
+// WithPayload adds the payload to the get fee by action name service unavailable response
+func (o *GetFeeByActionNameServiceUnavailable) WithPayload(payload *models.Error) *GetFeeByActionNameServiceUnavailable {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get fee by action name service unavailable response
+func (o *GetFeeByActionNameServiceUnavailable) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetFeeByActionNameServiceUnavailable) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(503)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
